--- a/wp-content/themes/starter/responsive.css
+++ b/wp-content/themes/starter/responsive.css
@@ -119,7 +119,7 @@
 	
 	#footer-widget-area{width:900px;}
 	.footer-bottom{width:920px;}
-	.topbar-banner ul li.content1 .content-inner { padding: 10px 10px 10px 0;  }
+	.topbar-banner ul li.content1 .content-inner { padding: 10px 10px 10px 10px;  }
 	.topbar-banner ul li.content2 .content-inner { padding: 10px 0 10px 10px;  }
 	.topbar-banner ul li.content3 .content-inner { padding: 10px 0 10px 10px; }
 	.inner-image img:hover { transform:none; }
