--- a/wp-content/themes/maydosoeks/style.css
+++ b/wp-content/themes/maydosoeks/style.css
@@ -53,6 +53,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     outline: 0;
     padding: 0;
     vertical-align: baseline;
+	text-align:justify;
 }
 
 article,
@@ -113,6 +114,8 @@ h1 {
 h2 {
     font-size: 16px;
     line-height: 1;
+	font-family: "Arial",serif;
+    color: #0053a6;
 }
 
 h3 {
@@ -122,7 +125,7 @@ h3 {
 
 h4 {
     font-size: 20px;
-    line-height: 1.2;
+    line-height: 1;
 }
 
 h5 {
@@ -1609,8 +1612,7 @@ span + .edit-link:before,
     float: left; 
     color: #fff;
     display: block;
-    font:16px/20px "Archivo Narrow",sans-serif;
-    text-transform: uppercase;
+    font:15px/20px "Arial",serif;
 	padding: 17px 10px;
     text-decoration: none;
 }
@@ -3658,7 +3660,7 @@ article.type-product .entry-header:before{background-position: -21px -34px;}
 .primary-sidebar .widget.woocommerce.widget_product_categories li a:hover, .widget.woocommerce.widget_product_categories li a:hover{/*background-color:#f5f5f5;*/ color:#2fb991;}
 .primary-sidebar .widget.woocommerce.widget_product_categories li:first-child a, .widget.woocommerce.widget_product_categories li:first-child a{border:none;}
 .primary-sidebar .widget.woocommerce ul li a ,.widget.woocommerce ul li a{	
-			color: #696969; 
+			color: #141823; 
 			padding:5px 0; 
 			display:block;
 			font-family:"Istok Web",sans-serif; 
@@ -5309,14 +5311,14 @@ ul.accepted-payment-methods li.visa span
 }
 
 .footer-widget h3.widget-title {
-    font-size: 18px;
+    font-size: 16px;
 	text-transform:uppercase;
     line-height: 26px;
 	background: none;
 	padding: 0;
-	color:#313131;
+	color:#41a62a;
 	border:none;
-	font-family:"Archivo Narrow",sans-serif;
+	font-family:"Arial",serif;
 	font-weight:600;
 }
 .tagcloud a {
@@ -5906,11 +5908,10 @@ article.post
 }
 
 .blog-posts-content .post-title {
-    font-size: 17px;
-    margin: 11px 0 8px;
+    font-size: 25px;
+    margin: 7px 0 18px;
 	clear:both;
-	font-family: "Archivo Narrow",sans-serif;
-	text-transform:uppercase;
+	font-family: "Arial", serif;
 }
 .blog-posts-content .post-date {
     color:#fff;
@@ -5932,7 +5933,8 @@ article.post
 .blog-posts-content .day{font-weight:bold; font-size:25px; margin-bottom:8px;}
 
 .blog-posts-content .post-title a {
-    color: #1b1b1b;
+    color: #0053a6;
+	font-size:16px;
 }
 
 .blog-posts-content .post-title a:hover {
