--- a/wp-content/themes/maydosoeks/style.css
+++ b/wp-content/themes/maydosoeks/style.css
@@ -275,6 +275,17 @@ ul {
 li
 {	
 }
+ul.menuphone li{
+	float:left;
+	margin-left: 30px;
+	margin-top: 8px;
+	color: #F5EF09;
+	list-style:none inside;
+	width:auto;
+	padding:0;
+	position:relative;
+	font-family:Arial,serif;
+}
 ol {
     list-style: decimal;
 }
@@ -1773,8 +1784,12 @@ span + .edit-link:before,
 }
 .navbar {
     clear: both;
-    position: relative;
-    background-color:#313131
+	width:100%;
+    position: fixed;
+	top:0;
+	left:0;
+	z-index:100000;
+    background-color:#313131;
 }
 /******End Menu*******/
 
@@ -6829,7 +6844,6 @@ ul.accepted-payment-methods li{display:inline-block !important;margin:0 5px 5px 
     text-align: center;
     width: 12px;
 }
-
 .woocommerce-shipping-calculator .shipping-calculator-button {
     display: inline-block;
     margin: 5px 0;
@@ -6866,7 +6880,6 @@ ul.accepted-payment-methods li{display:inline-block !important;margin:0 5px 5px 
 #khachhang .post-image img { width:100%;height:100%; border-radius:100%;-moz-border-radius:100%;webkit-border-radius:100%;}
 div.description{clear:both;}
 .textwidgeth1{
-	background: rgb(239, 239, 239);
-	padding: 20px 0;
-	border-radius: 5px;
+	
+	padding:5px 0;
 }
